--- a/.github/workflows/generate_web_assets.yml
+++ b/.github/workflows/generate_web_assets.yml
@@ -1,8 +1,6 @@
 name: Generate web assets
 on:
-  push:
-    branches:
-    - master
+  workflow_dispatch:
 jobs:
   generate_static_assets:
     if: ( !contains(github.event.head_commit.message, '[ci skip]') )
