--- a/.github/workflows/byond.yml
+++ b/.github/workflows/byond.yml
@@ -2,15 +2,15 @@ name: CI Suite
 
 on:
   workflow_dispatch:
-  merge_group:
-    branches:
-    - master
-  push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
+  #merge_group:
+  #  branches:
+  #  - master
+  #push:
+  #  branches:
+  #  - master
+  #pull_request:
+  #  branches:
+  #  - master
 
 env:
   MACRO_COUNT: 0
