--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -1,12 +1,13 @@
 name: "Maintenance"
 on:
   # So that PRs touching the same files as the push are updated
-  push:
+  # push:
   # So that the `dirtyLabel` is removed if conflicts are resolve
   # We recommend `pull_request_target` so that github secrets are available.
   # In `pull_request` we wouldn't be able to change labels of fork PRs
-  pull_request_target:
-    types: [synchronize]
+  workflow_dispatch:
+  #pull_request_target:
+  #  types: [synchronize]
 
 jobs:
   check-conflicts:
