--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -63,7 +63,7 @@ jobs:
     timeout-minutes: 45
     strategy:
       fail-fast: false
-      max-parallel: 4          # <— tune this (2–6 is usually safe)
+      max-parallel: 3
       matrix:
         map: ${{ fromJSON(needs.enumerate.outputs.maps_json) }}
 
